force-app/main/default/objects/Opportunity/fields/Balancing_Feather__c.field-meta.xml
<CustomField>
    <fullName>Balancing_Feather__c</fullName>
    <inlineHelpText>$3</inlineHelpText>
    <label>Balancing Feather #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>