force-app/main/default/objects/Opportunity/fields/Cake_Order__c.field-meta.xml
<CustomField>
    <fullName>Cake_Order__c</fullName>
    <inlineHelpText>Serves 20-24 guests
$100 Cake</inlineHelpText>
    <label>Cake Order #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>