force-app/main/default/objects/Opportunity/fields/CircEsteem_T_Shirt__c.field-meta.xml
<CustomField>
    <fullName>CircEsteem_T_Shirt__c</fullName>
    <inlineHelpText>$16</inlineHelpText>
    <label>CircEsteem T-Shirt #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>