force-app/main/default/objects/Opportunity/fields/Circus_Skills_Large_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Circus_Skills_Large_Interested_In__c</fullName>
    <label>Circus Skills - Large - Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tight Wire</fullName>
            </value>
            <value>
                <fullName>Rolling Globe</fullName>
            </value>
            <value>
                <fullName>Partner Acrobatics</fullName>
            </value>
            <value>
                <fullName>Gym Wheel</fullName>
            </value>
            <value>
                <fullName>Lyra</fullName>
            </value>
            <value>
                <fullName>Trapeze</fullName>
            </value>
            <value>
                <fullName>Aerial Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>