force-app/main/default/objects/Opportunity/fields/Circus_Skills_Small__c.field-meta.xml
<CustomField>
    <fullName>Circus_Skills_Small__c</fullName>
    <label>Circus Skills - Small</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabolo</fullName>
            </value>
            <value>
                <fullName>Juggling</fullName>
            </value>
            <value>
                <fullName>Feather Balancing</fullName>
            </value>
            <value>
                <fullName>Clowning</fullName>
            </value>
            <value>
                <fullName>Rola Bola</fullName>
            </value>
            <value>
                <fullName>Plate Spinning</fullName>
            </value>
            <value>
                <fullName>Stilts (Group must be &lt;20)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>