force-app/main/default/objects/Opportunity/fields/Clown_Nose__c.field-meta.xml
<CustomField>
    <fullName>Clown_Nose__c</fullName>
    <inlineHelpText>$2</inlineHelpText>
    <label>Clown Nose #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>