force-app/main/default/objects/Opportunity/fields/Desert_Order__c.field-meta.xml
<CustomField>
    <fullName>Desert_Order__c</fullName>
    <inlineHelpText>Serves 20-24 guests
$50 Cupcakes</inlineHelpText>
    <label>Cupcake Order #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>