force-app/main/default/objects/Opportunity/fields/Est_Max_Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Est_Max_Class_Size__c</fullName>
    <label>Est. Max Class Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>