force-app/main/default/objects/Opportunity/fields/Est_Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Est_Number_of_Children__c</fullName>
    <label>Est. Number of Children</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>