force-app/main/default/objects/Opportunity/fields/Ethiopian_Catering__c.field-meta.xml
<CustomField>
    <fullName>Ethiopian_Catering__c</fullName>
    <inlineHelpText>$17 per person
10 minimum order
Plates, napkins, flatware included</inlineHelpText>
    <label>Ethiopian Catering #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>