force-app/main/default/objects/Opportunity/fields/Extra_Time_Half_Hour__c.field-meta.xml
<CustomField>
    <fullName>Extra_Time_Half_Hour__c</fullName>
    <inlineHelpText>$100/Half Hour</inlineHelpText>
    <label>Extra Time Half Hour #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>