force-app/main/default/objects/Opportunity/fields/Face_Painter_Hour__c.field-meta.xml
<CustomField>
    <fullName>Face_Painter_Hour__c</fullName>
    <inlineHelpText>$300/hour</inlineHelpText>
    <label>Face Painter Hour #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>