force-app/main/default/objects/Opportunity/fields/Jugging_Scarves_Set_of_3__c.field-meta.xml
<CustomField>
    <fullName>Jugging_Scarves_Set_of_3__c</fullName>
    <inlineHelpText>$8</inlineHelpText>
    <label>Jugging Scarves (Set of 3) #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>