force-app/main/default/objects/Opportunity/fields/Juggler_Hour__c.field-meta.xml
<CustomField>
    <fullName>Juggler_Hour__c</fullName>
    <inlineHelpText>$250/hour</inlineHelpText>
    <label>Juggler Hour #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>