force-app/main/default/objects/Opportunity/fields/Max_Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Class_Size__c</fullName>
    <label>Max Class Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>