force-app/main/default/objects/Opportunity/fields/Number_of_Classes_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Classes_Requested__c</fullName>
    <label>Number of Classes Requested</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>