force-app/main/default/objects/Opportunity/fields/Party_Extras__c.field-meta.xml
<CustomField>
    <fullName>Party_Extras__c</fullName>
    <label>Party Extras</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Popcorn_Machine_100</fullName>
                <label>Popcorn Machine - $100</label>
            </value>
            <value>
                <fullName>Snow Cone Machine_150</fullName>
                <label>Snow Cone Machine - $150</label>
            </value>
            <value>
                <fullName>Time to Shine!_200</fullName>
                <label>Time to Shine! - $200</label>
            </value>
            <value>
                <fullName>15 Minute Circus Show_500</fullName>
                <label>15 Minute Circus Show - $500</label>
            </value>
            <value>
                <fullName>45 Minute Circus Show_1000</fullName>
                <label>45 Minute Circus Show - $1000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>