force-app/main/default/objects/Opportunity/fields/Stilt_Walker_Hour__c.field-meta.xml
<CustomField>
    <fullName>Stilt_Walker_Hour__c</fullName>
    <inlineHelpText>$250/hour</inlineHelpText>
    <label>Stilt Walker Hour #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>