force-app/main/default/objects/Opportunity/recordTypes/Birthday_Party.recordType-meta.xml
<RecordType>
    <fullName>Birthday_Party</fullName>
    <active>true</active>
    <businessProcess>Contract Sales Process</businessProcess>
    <label>Birthday Party</label>
</RecordType>