force-app/main/default/objects/Opportunity/recordTypes/Birthday_Party_Workshop.recordType-meta.xml
<RecordType>
    <fullName>Birthday_Party_Workshop</fullName>
    <active>true</active>
    <businessProcess>Contract Sales Process</businessProcess>
    <label>Birthday Party/Workshop</label>
</RecordType>