force-app/main/default/objects/Opportunity/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <businessProcess>Contract Sales Process</businessProcess>
    <description>The process used to track school sales cycles.</description>
    <label>School</label>
</RecordType>